[gd_scene load_steps=4 format=3 uid="uid://q13cub0mowmj"]

[ext_resource type="Texture2D" uid="uid://dfxbs1yix1ber" path="res://assets/ui/container_popup.png" id="1_x2imw"]
[ext_resource type="Texture2D" uid="uid://dnngpvpgktkli" path="res://assets/ingredients/ingredient_banana.png" id="2_58b1w"]
[ext_resource type="Script" uid="uid://l1v7xw4enes" path="res://scripts/container_popup.gd" id="2_lvw1e"]

[node name="ContainerPopup" type="Sprite2D"]
scale = Vector2(0.9, 0.9)
texture = ExtResource("1_x2imw")
script = ExtResource("2_lvw1e")

[node name="Slot1" type="Sprite2D" parent="."]
position = Vector2(-104.5, -14)
scale = Vector2(0.476635, 0.476635)
texture = ExtResource("2_58b1w")

[node name="Slot2" type="Sprite2D" parent="."]
position = Vector2(-35, -14)
scale = Vector2(0.476635, 0.476635)
texture = ExtResource("2_58b1w")

[node name="Slot3" type="Sprite2D" parent="."]
position = Vector2(35, -15)
scale = Vector2(0.476635, 0.476635)
texture = ExtResource("2_58b1w")

[node name="Slot4" type="Sprite2D" parent="."]
position = Vector2(105, -14)
scale = Vector2(0.476635, 0.476635)
texture = ExtResource("2_58b1w")
